--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">wcr</string>
+<string name="app_name">wcr</string>
+<string name="facebook_app_id">1225181204925113</string>
+<string name="fb_login_protocol_scheme">fb1225181204925113</string>
+<string name="facebook_client_token">c50a9aa3670d3361a24048d09abb9bf3</string>
 </resources>
